# VETVI

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
alembic/: env.py
alembic/versions/: 2026_04_21_2250-0255d7a9e77b_initial_migration.py  2026_04_23_1840-1591854004c7_added_relationships.py  2026_05_09_1731-73f457a3f7c8_add_is_favourite_to_familygroup_model.py  2026_05_09_1853-b06a917a164d_add_is_favourite_to_familymembership_.py  2026_05_11_1757-837cf0206f1b_little_fix.py  2026_05_11_1759-b77ecd243746_little_fix.py  2026_05_12_1314-296146530010_little_fix.py  2026_05_12_1406-c9fb31da4f0b_little_fix.py  2026_05_18_1711-a947b1ed072b_delete_role_to_fam_member.py  2026_05_19_2224-8b0f62830456_add_family_group_id_to_posts.py
src/: App.tsx  index.css  main.py  main.tsx
src/api/: apiError.ts  auth.ts  family.ts  invitations.ts  profile_posts.ts
src/components/: AddMemberDialog.tsx  AddMemberModal.tsx  CreateFamilyModal.tsx  CreatePostWithMedia.tsx  EditAccountForm.tsx  EditFamilyMemberDataForm.tsx  EditMemberProfileForm.tsx  EditMyProfileForm.tsx  FamilyFeed.tsx  FamilyMemberNode.tsx  FamilySwitcher.tsx  FamilyTokenModal.tsx  FamilyTree.tsx  InviteModal.tsx  JoinByLinkModal.tsx  MemberProfile.tsx  PostCard.tsx  PostForm.tsx  ProtectedRoute.tsx  RelationshipModal.tsx  SelectFamilyModal.tsx  TagSelector.tsx  UserPosts.tsx  UserProfileCard.tsx  UserSettings.tsx
src/context/: AuthContext.tsx
src/core/: config.py
src/crud/: families.py  invitations.py  members.py
src/hooks/: useAuth.ts  (+5 more)
tests/: conftest.py  login.py
(+72 files in other folders)
